--- a/ImagePortfolio/main.css
+++ b/ImagePortfolio/main.css
@@ -73,6 +73,12 @@ section {
 
     cursor: pointer;
 }
+@media (max-width: 460px) {
+    .project img {
+        width: 90%;
+        max-width: none;
+    }
+}
 
 .project p {
     font-weight: 700;
