--- a/ImagePortfolio/main.css
+++ b/ImagePortfolio/main.css
@@ -114,6 +114,33 @@ footer {
     padding: 10px 0;
 }
 
+/* Лоадер */
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999; /* Перед усім іншим контентом */
+    display: none; /* Прихований за замовчуванням */
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+/* Приховати контент до завантаження */
+#projects-container {
+    display: none;
+}
+
+
 /* Modal Styles */
 .modal {
     display: none;
