--- a/ImagePortfolio/main.css
+++ b/ImagePortfolio/main.css
@@ -124,10 +124,10 @@ footer {
     animation: spin 2s linear infinite;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 46%;
     transform: translate(-50%, -50%);
     z-index: 9999; /* Перед усім іншим контентом */
-    display: none; /* Прихований за замовчуванням */
+    display: block; /* Прихований за замовчуванням */
 }
 
 @keyframes spin {
