--- a/ImagePortfolio/main.css
+++ b/ImagePortfolio/main.css
@@ -48,7 +48,7 @@ section {
 }
 
 #projects-container {
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: center; 
     align-items: center; 
@@ -88,7 +88,7 @@ section {
     margin-top: 10px;
 }
 
-.project.visible {
+.project {
     opacity: 1;
     transform: translateY(0);
 }
