--- a/ImagePortfolio/main.css
+++ b/ImagePortfolio/main.css
@@ -124,8 +124,8 @@ footer {
     height: 120px;
     animation: spin 2s linear infinite;
     position: absolute;
-    top: 50%;
-    left: 46%;
+    top: calc(60% - 60px); 
+    left: calc(50% - 70px);
     transform: translate(-50%, -50%);
     z-index: 9999; /* Перед усім іншим контентом */
     display: block; /* Прихований за замовчуванням */
